fixed some alignment issues

--- a/frontend/src/components/SongDisplays/SongDisplays.css
+++ b/frontend/src/components/SongDisplays/SongDisplays.css
@@ -53,9 +53,9 @@ align-content: flex-start;
 .trending-tracks{
   display: flex;
   flex-direction: column;
-  position: relative;
-  top: -250px;
-  max-width: 1180px;
+  position: absolute;
+  top: 550px;
+  width: fit-content;
   margin:auto;
   text-align: center;
 }
@@ -64,7 +64,7 @@ align-content: flex-start;
   text-align: center;
   width: 100%;
   position: relative;
-  top: 460px;
+  top: 10px;
   font-size: 24px;
   margin-top:30px;
 
@@ -92,7 +92,7 @@ align-content: flex-start;
   display: grid;
   grid-template-columns: repeat(6,175px);
   position: relative;
-  top: 450px;
+  top: 0px;
 
 }
 
